<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--
        Référence:
            &#160; espace
            0144: É
            0200: È
            0203: Ë
            0192: À
    -->
    <!-- Personal -->
    <string name="app_name" translatable="false"><xliff:g id="app_name">Niviel</xliff:g></string>
    <string name="author" translatable="false"><xliff:g id="author">Herel Adrastel</xliff:g></string>
    <string name="email" translatable="false"><xliff:g id="email">herel.dev@gmail.com</xliff:g></string>
    <string name="wca" translatable="false"><xliff:g>WCA</xliff:g></string>

    <!-- Activities -->
    <string name="profile_fragment" translatable="false">Profile</string>
    <string name="follower_fragment" translatable="false">Follower</string>
    <string name="ranking_fragment" translatable="false">Ranking</string>
    <string name="settings_fragment" translatable="false">Settings</string>

    <!-- CUBES -->
    <string name="cube_3x3">Rubik\'s cube</string>

    <!-- Intro -->
    <string name="begin">Pour commencer</string>
    <string name="intro_slide_1">Bienvenue sur Niviel, une application simple affichant vos records provenant de la World Cube Association</string>
    <string name="intro_slide_2">Retrouvez ainsi vos records, historiques, competitions avec une interface légère et rapide</string>
    <string name="intro_slide_3">Vous pouvez suivre des personnes afin de garder leur résultats hors ligne et être informés quand ils battent leur records</string>
    <string name="intro_slide_4">Identifiez-vous pour acceder rapidement à votre profil.<xliff:g>\n\n</xliff:g>Pour vous identifer, accédez à votre profil via une recherche, appuyez sur le bouton + et cliquez sur \"Changer de profil\"</string>

    <!-- Records -->
    <string name="records">Records</string>
    <string name="single">Single</string>
    <string name="average">Moyenne</string>

    <string name="record_time">Temps: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="record_nr">Classement national: <xliff:g id="rank">%1$s</xliff:g></string>
    <string name="record_cr">Classement continental: <xliff:g id="rank">%1$s</xliff:g></string>
    <string name="record_wr">Classement mondial: <xliff:g id="rank">%1$s</xliff:g></string>

    <!-- History -->
    <string name="event">Évenement</string>
    <string name="history">Historique</string>
    <string name="round">Round</string>
    <string name="best">Meilleur</string>

    <!-- Ranking -->
    <string name="ranking">Classement</string>
    <string name="rank">Place</string>
    <string name="person">Personne</string>
    <string name="result">Résultat</string>
    <string name="citizen">Nationnalité</string>
    <string name="world">Monde</string>
    <string name="two_infos"><xliff:g>%1$s (%2$s)</xliff:g></string>
    <string name="switch_cube">Changer de cube</string>
    <string name="switch_country">Changer de pays</string>
    <string name="share_ranking"><xliff:g id="name">%1$s</xliff:g>: classé n°<xliff:g id="rank">%2$s</xliff:g> avec un temps de <xliff:g id="time">%3$s</xliff:g></string>

    <!-- Followers -->
    <string name="follow">Suivre</string>
    <string name="unfollow">Ne plus suivre</string>
    <string name="followers">Followers</string>

    <!-- Profile -->
    <string name="profile">Profil</string>
    <string name="wca_id">Identifiant WCA</string>
    <string name="edit_profile">Changer de profil</string>
    <string name="toast_switch_profile_confirmation">Votre profil est maintenant au nom de <xliff:g id="name">%1$s</xliff:g></string>
    <string name="toast_follow_confirmation">Vous suivez <xliff:g id="name">%1$s</xliff:g></string>
    <string name="toast_unfollow_confirmation">Vous ne suivez plus <xliff:g id="name">%1$s</xliff:g></string>
    <string name="dialog_edit_profile_follow_title">Changement de profil/Suivre</string>
    <string name="dialog_edit_profile_follow_message">
        Vous pouvez :
        <xliff:g>\n\t-</xliff:g>Suivre <xliff:g id="name">%1$s</xliff:g> et être informé si il obtient de nouveaux records.
        <xliff:g>\n\t-</xliff:g>Changer de profil et assigner votre profil personnel au nom de <xliff:g id="name">%1$s</xliff:g>.
    </string>
    <string name="toast_edit_profile_success">Le changement de profil a bien été effectué</string>
    <string name="toast_edit_profile_failure">Une erreur est survenue lors du changement de profil</string>

    <!-- User -->
    <string name="gender">Genre</string>
    <string name="country">Pays</string>

    <!-- Competitions -->
    <string name="competition">Compétition</string>
    <string name="competitions">Compétitions</string>
    <plurals name="in_progress_competitions">
        <item quantity="one"><xliff:g id="count">%1$d</xliff:g> compétition en cours</item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> compétitions en cours</item>
    </plurals>

    <plurals name="upcomming_competitions">
        <item quantity="one"><xliff:g id="count">%1$d</xliff:g> compétition à venir</item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> compétitions à venir</item>
    </plurals>

    <plurals name="competitions">
        <item quantity="one">competition</item>
        <item quantity="other">competitions</item>
    </plurals>



    <!-- Search -->
    <string name="search">Rechercher</string>
    <string name="search_hint_users">Rechercher des joueurs…</string>

    <!-- Errors -->
    <string name="error_activity">Aucune application disponible pour effectuer cette action</string>
    <string name="error_connection">Veuillez vous connecter à internet</string>
    <string name="err_loading">Erreur de chargement<xliff:g>\n\n :-(</xliff:g></string>
    <string name="err_server">Erreur interne du serveur</string>
    <string name="error_interpretation_html">Erreur d\'interpretation du code HTML</string>
    <string name="wrong_wca_id">Identifiant WCA erroné</string>
    <string name="unknown_error">Erreur inconnue</string>
    <string name="no_followers">Vous ne suivez personne</string>

    <!-- Menus -->
    <string name="settings">Réglages</string>
    <string name="my_profile">Mon profil</string>
    <string name="explore">Explorer</string>


    <!-- Préférences -->

    <!-- Thème -->
    <string name="theme">Thème</string>
    <string name="day_night">Thème clair/sombre</string>
    <string name="pref_theme_summary">Choisissez un thème clair ou sombre</string>
    <string-array name="theme_list">
        <item>Clair</item>
        <item>Sombre</item>
    </string-array>

    <string-array name="theme_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>


    <!-- Check records network -->
    <string name="pref_check_network_title">Réseau utilisé pour vérifier les records</string>
    <string name="pref_check_network_summary">Utiliser le Wi-Fi ou le Wi-Fi et les données mobiles pour effectuer la vérification</string>
    <string-array name="pref_check_network_list">
        <item>Wi-Fi</item>
        <item>Wi-Fi + Données mobiles</item>
    </string-array>
    <string-array name="pref_check_network_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Check record frequency -->
    <string name="pref_check_freq_title">Fréquence de vérification</string>
    <string name="pref_check_freq_summary">Fréquence de vérification des records, historiques du profil personnel et des followers.</string>
    <string-array name="pref_check_freq_list">
        <item>Une fois par heure</item>
        <item>Une fois par jour</item>
        <item>Deux fois par jour</item>
        <item>Une fois par semaine</item>
        <item>Deux fois par semaine</item>
        <item>Jamais</item>
    </string-array>

    <string-array name="pref_check_freq_values" translatable="false">
        <item>3600000</item>
        <item>86400000</item>
        <item>43200000</item>
        <item>604800000</item>
        <item>302400000</item>
        <item>0</item>
    </string-array>

    <!-- Reset profile -->
    <string name="reset_pref_id_title">Réinitialiser votre profil personnel</string>
    <string name="reset_pref_id_content">Réinitialiser votre profil personnel ?</string>




    <!-- Actions -->
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="refresh">Rafraichir</string>
    <string name="more_info">Plus d\'infos</string>
    <string name="share">Partager</string>
    <string name="details">Détails</string>
    <string name="about">À propos</string>
    <string name="report_bug">Signaler un bug</string>
    <string name="report_err_trad">Signaler une erreur de traduction</string>
    <string name="rate">Évaluer</string>
    <string name="contact">Contact</string>
    <string name="goto_internet">Voir le site web</string>
    <string name="check_records">Vérifier les records</string>
    <string name="confirm">Confirmer</string>
    <string name="toast_adding">Ajout en cours</string>
    <string name="goto_maps">Voir sur la carte</string>

    <!-- Send mail -->
    <string name="send">Envoyer</string>
    <string name="mail_subject" translatable="false"><xliff:g id="mail_title">Feedback</xliff:g></string>
    <string name="mail_body" translatable="false"><xliff:g>\n\nSend from: %1$s\nAndroid version: %2$s (%3$d)\nApplication Version %4$s (%5$d)</xliff:g></string>

    <!-- Others -->
    <string name="zero" translatable="false">0</string>
    <string name="no_title" translatable="false"/>
    <string name="private_policy">Politique de confidentialité</string>
    <string name="intro">Introduction</string>


    <!-- Notification -->
    <string name="notif_single">single</string>
    <string name="notif_average">average</string>
    <string name="notif_country">national</string>
    <string name="notif_continent">continental</string>
    <string name="notif_world">mondial</string>

    <string name="notif_new_single">Single battu: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="notif_new_average">Average battu: <xliff:g id="time">%1$s</xliff:g></string>

    <string name="string_details_string"><xliff:g id="title">%1$s</xliff:g> (<xliff:g id="content">%2$s</xliff:g>)</string>
    <string name="string_details_number"><xliff:g id="title">%1$s</xliff:g> (<xliff:g id="number">%2$d</xliff:g>)</string>


</resources>
