<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/profile">
        <com.adrastel.niviel.preferences.ResetPersIdPreference
            android:key="@string/pref_personal_id"
            android:title="@string/reset_pref_id_title"
            android:dialogTitle="@string/reset_pref_id_title"
            android:dialogMessage="@string/reset_pref_id_content"/>

        <com.adrastel.niviel.preferences.ThemePreference
            android:key="@string/pref_isdark"
            android:defaultValue="0"
            android:title="@string/theme"
            android:summary="@string/pref_theme_summary"
            android:dialogTitle="@string/theme"
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:entries="@array/theme_list"
            android:entryValues="@array/theme_list_values"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/records">
        <com.adrastel.niviel.preferences.CheckFreqPreference
            android:key="@string/pref_check_freq"
            android:defaultValue="3600000"
            android:title="@string/pref_check_freq_title"
            android:summary="@string/pref_check_freq_summary"
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:entries="@array/pref_check_freq_list"
            android:entryValues="@array/pref_check_freq_values"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference android:title="@string/report_bug"/>
        <Preference android:title="@string/report_err_trad"/>
        <Preference android:title="@string/rate"/>

    </PreferenceCategory>
</PreferenceScreen>