<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/check_records"
        android:title="@string/check_records"
        app:showAsAction="never"/>
    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>
